Fix text alignment on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -545,6 +545,13 @@ Small devices (smaller than 640px)
     margin-bottom: 30px;
   }
 
+  .frinans, .bluecall {
+    padding: 0.625em;
+    padding-top: 150px;
+    border-radius: 3px;
+    text-align: left;
+  }
+
   #frinans-interview {
     width: 90%;
   }
